fixes progress bar alignment in login page

--- a/multiPlayerClient/src/Pages/Login/LogReg.css
+++ b/multiPlayerClient/src/Pages/Login/LogReg.css
@@ -41,30 +41,19 @@
     background-color: initial !important;
 }
 
-.modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
-  
+
 .isRegLogButton{
     width: 100px;
-    background-color: rgb(104, 104, 223);
+    background-color: rgb(38, 38, 224);
     border: 0px solid white;
     padding: 10px;
     border-radius: 4px;
+    color: white;
 }
 
 .isRegLogButton:hover{
     cursor: pointer;
-    background-color: #514ab0;
+    background-color: #241d84;
 }
 
 .isRegLogClick{
